# SpaceShooter

./: CMakeLists.txt
resources/shaders/: fragShader.txt  vertShader.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
